@@ -15,6 +15,7 @@
           (http://www.packetfence.org/mantis/view.php?id=142)
         support MAC addresses in several different formats
           (http://www.packetfence.org/mantis/view.php?id=385)
+        added script to check for duplication of secure MACs
 
 
 1.7.3
